Assignment4/1405079/y.output
Terminals unused in grammar

   DO
   SWITCH
   DEFAULT
   BREAK
   CASE
   CONTINUE
   SINGLECOM
   MULTICOM


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN RPAREN SEMICOLON

    9 $@1: %empty

   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement

   11 $@2: %empty

   12 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement

   13 parameter_list: parameter_list COMMA type_specifier ID
   14               | parameter_list COMMA type_specifier
   15               | type_specifier ID
   16               | type_specifier

   17 $@3: %empty

   18 compound_statement: LCURL $@3 statements RCURL

   19 @4: %empty

   20 compound_statement: LCURL @4 RCURL

   21 var_declaration: type_specifier declaration_list SEMICOLON

   22 type_specifier: INT
   23               | FLOAT
   24               | VOID

   25 declaration_list: declaration_list COMMA ID
   26                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   27                 | ID
   28                 | ID LTHIRD CONST_INT RTHIRD

   29 statements: statement
   30           | statements statement

   31 statement: var_declaration
   32          | expression_statement
   33          | compound_statement
   34          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   35          | IF LPAREN expression RPAREN statement
   36          | IF LPAREN expression RPAREN statement ELSE statement
   37          | WHILE LPAREN expression RPAREN statement
   38          | PRINTLN LPAREN ID RPAREN SEMICOLON
   39          | RETURN expression SEMICOLON
   40          | error SEMICOLON

   41 expression_statement: SEMICOLON
   42                     | expression SEMICOLON

   43 variable: ID
   44         | ID LTHIRD expression RTHIRD

   45 expression: logic_expression
   46           | variable ASSINOP logic_expression

   47 logic_expression: rel_expression
   48                 | rel_expression LOGICOP rel_expression

   49 rel_expression: simple_expression
   50               | simple_expression RELOP simple_expression

   51 simple_expression: term
   52                  | simple_expression ADDOP term

   53 term: unary_expression
   54     | term MULOP unary_expression

   55 unary_expression: ADDOP unary_expression
   56                 | NOT unary_expression
   57                 | factor

   58 factor: variable
   59       | ID LPAREN argument_list RPAREN
   60       | LPAREN expression RPAREN
   61       | CONST_INT
   62       | CONST_FLOAT
   63       | variable INCOP
   64       | variable DECOP

   65 argument_list: arguments
   66              | %empty

   67 arguments: arguments COMMA logic_expression
   68          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256) 40
IF (258) 35 36
FOR (259) 34
DO (260)
INT (261) 22
FLOAT (262) 23
VOID (263) 24
SWITCH (264)
DEFAULT (265)
ELSE (266) 36
WHILE (267) 37
BREAK (268)
RETURN (269) 39
CASE (270)
CONTINUE (271)
PRINTLN (272) 38
CONST_INT (273) 26 28 61
CONST_FLOAT (274) 62
ID (275) 7 8 10 12 13 15 25 26 27 28 38 43 44 59
ADDOP (276) 52 55
MULOP (277) 54
INCOP (278) 63
DECOP (279) 64
RELOP (280) 50
ASSINOP (281) 46
LOGICOP (282) 48
NOT (283) 56
LPAREN (284) 7 8 10 12 34 35 36 37 38 59 60
RPAREN (285) 7 8 10 12 34 35 36 37 38 59 60
LCURL (286) 18 20
RCURL (287) 18 20
LTHIRD (288) 26 28 44
RTHIRD (289) 26 28 44
COMMA (290) 13 14 25 26 67
SEMICOLON (291) 7 8 21 38 39 40 41 42
SINGLECOM (292)
MULTICOM (293)
only_if (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5 6, on right: 2 3
func_declaration (44)
    on left: 7 8, on right: 5
func_definition (45)
    on left: 10 12, on right: 6
$@1 (46)
    on left: 9, on right: 10
$@2 (47)
    on left: 11, on right: 12
parameter_list (48)
    on left: 13 14 15 16, on right: 7 10 13 14
compound_statement (49)
    on left: 18 20, on right: 10 12 33
$@3 (50)
    on left: 17, on right: 18
@4 (51)
    on left: 19, on right: 20
var_declaration (52)
    on left: 21, on right: 4 31
type_specifier (53)
    on left: 22 23 24, on right: 7 8 10 12 13 14 15 16 21
declaration_list (54)
    on left: 25 26 27 28, on right: 21 25 26
statements (55)
    on left: 29 30, on right: 18 30
statement (56)
    on left: 31 32 33 34 35 36 37 38 39 40, on right: 29 30 34 35 36
    37
expression_statement (57)
    on left: 41 42, on right: 32 34
variable (58)
    on left: 43 44, on right: 46 58 63 64
expression (59)
    on left: 45 46, on right: 34 35 36 37 39 42 44 60
logic_expression (60)
    on left: 47 48, on right: 45 46 67 68
rel_expression (61)
    on left: 49 50, on right: 47 48
simple_expression (62)
    on left: 51 52, on right: 49 50 52
term (63)
    on left: 53 54, on right: 51 52 54
unary_expression (64)
    on left: 55 56 57, on right: 53 54 55 56
factor (65)
    on left: 58 59 60 61 62 63 64, on right: 57
argument_list (66)
    on left: 65 66, on right: 59
arguments (67)
    on left: 67 68, on right: 65 67


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 1

   22 type_specifier: INT .

    $default  reduce using rule 22 (type_specifier)


State 2

   23 type_specifier: FLOAT .

    $default  reduce using rule 23 (type_specifier)


State 3

   24 type_specifier: VOID .

    $default  reduce using rule 24 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 11


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_declaration .

    $default  reduce using rule 5 (unit)


State 8

    6 unit: func_definition .

    $default  reduce using rule 6 (unit)


State 9

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 10

    7 func_declaration: type_specifier . ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier . ID LPAREN RPAREN SEMICOLON
   10 func_definition: type_specifier . ID LPAREN parameter_list RPAREN $@1 compound_statement
   12                | type_specifier . ID LPAREN RPAREN $@2 compound_statement
   21 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    7 func_declaration: type_specifier ID . LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID . LPAREN RPAREN SEMICOLON
   10 func_definition: type_specifier ID . LPAREN parameter_list RPAREN $@1 compound_statement
   12                | type_specifier ID . LPAREN RPAREN $@2 compound_statement
   27 declaration_list: ID .
   28                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 27 (declaration_list)


State 14

   21 var_declaration: type_specifier declaration_list . SEMICOLON
   25 declaration_list: declaration_list . COMMA ID
   26                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 15

    7 func_declaration: type_specifier ID LPAREN . parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN . RPAREN SEMICOLON
   10 func_definition: type_specifier ID LPAREN . parameter_list RPAREN $@1 compound_statement
   12                | type_specifier ID LPAREN . RPAREN $@2 compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 19

    parameter_list  go to state 20
    type_specifier  go to state 21


State 16

   28 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


State 17

   25 declaration_list: declaration_list COMMA . ID
   26                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 18

   21 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 21 (var_declaration)


State 19

    8 func_declaration: type_specifier ID LPAREN RPAREN . SEMICOLON
   12 func_definition: type_specifier ID LPAREN RPAREN . $@2 compound_statement

    SEMICOLON  shift, and go to state 24

    $default  reduce using rule 11 ($@2)

    $@2  go to state 25


State 20

    7 func_declaration: type_specifier ID LPAREN parameter_list . RPAREN SEMICOLON
   10 func_definition: type_specifier ID LPAREN parameter_list . RPAREN $@1 compound_statement
   13 parameter_list: parameter_list . COMMA type_specifier ID
   14               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 26
    COMMA   shift, and go to state 27


State 21

   15 parameter_list: type_specifier . ID
   16               | type_specifier .

    ID  shift, and go to state 28

    $default  reduce using rule 16 (parameter_list)


State 22

   28 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 29


State 23

   25 declaration_list: declaration_list COMMA ID .
   26                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 30

    $default  reduce using rule 25 (declaration_list)


State 24

    8 func_declaration: type_specifier ID LPAREN RPAREN SEMICOLON .

    $default  reduce using rule 8 (func_declaration)


State 25

   12 func_definition: type_specifier ID LPAREN RPAREN $@2 . compound_statement

    LCURL  shift, and go to state 31

    compound_statement  go to state 32


State 26

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN . SEMICOLON
   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN . $@1 compound_statement

    SEMICOLON  shift, and go to state 33

    $default  reduce using rule 9 ($@1)

    $@1  go to state 34


State 27

   13 parameter_list: parameter_list COMMA . type_specifier ID
   14               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 35


State 28

   15 parameter_list: type_specifier ID .

    $default  reduce using rule 15 (parameter_list)


State 29

   28 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 28 (declaration_list)


State 30

   26 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 36


State 31

   18 compound_statement: LCURL . $@3 statements RCURL
   20                   | LCURL . @4 RCURL

    RCURL     reduce using rule 19 (@4)
    $default  reduce using rule 17 ($@3)

    $@3  go to state 37
    @4   go to state 38


State 32

   12 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement .

    $default  reduce using rule 12 (func_definition)


State 33

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON .

    $default  reduce using rule 7 (func_declaration)


State 34

   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 . compound_statement

    LCURL  shift, and go to state 31

    compound_statement  go to state 39


State 35

   13 parameter_list: parameter_list COMMA type_specifier . ID
   14               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 40

    $default  reduce using rule 14 (parameter_list)


State 36

   26 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 41


State 37

   18 compound_statement: LCURL $@3 . statements RCURL

    error        shift, and go to state 42
    IF           shift, and go to state 43
    FOR          shift, and go to state 44
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    WHILE        shift, and go to state 45
    RETURN       shift, and go to state 46
    PRINTLN      shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53
    LCURL        shift, and go to state 31
    SEMICOLON    shift, and go to state 54

    compound_statement    go to state 55
    var_declaration       go to state 56
    type_specifier        go to state 57
    statements            go to state 58
    statement             go to state 59
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor                go to state 68


State 38

   20 compound_statement: LCURL @4 . RCURL

    RCURL  shift, and go to state 69


State 39

   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement .

    $default  reduce using rule 10 (func_definition)


State 40

   13 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 13 (parameter_list)


State 41

   26 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 26 (declaration_list)


State 42

   40 statement: error . SEMICOLON

    SEMICOLON  shift, and go to state 70


State 43

   35 statement: IF . LPAREN expression RPAREN statement
   36          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 71


State 44

   34 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 72


State 45

   37 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 73


State 46

   39 statement: RETURN . expression SEMICOLON

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable           go to state 61
    expression         go to state 74
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 47

   38 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 75


State 48

   61 factor: CONST_INT .

    $default  reduce using rule 61 (factor)


State 49

   62 factor: CONST_FLOAT .

    $default  reduce using rule 62 (factor)


State 50

   43 variable: ID .
   44         | ID . LTHIRD expression RTHIRD
   59 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 76
    LTHIRD  shift, and go to state 77

    $default  reduce using rule 43 (variable)


State 51

   55 unary_expression: ADDOP . unary_expression

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable          go to state 78
    unary_expression  go to state 79
    factor            go to state 68


State 52

   56 unary_expression: NOT . unary_expression

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable          go to state 78
    unary_expression  go to state 80
    factor            go to state 68


State 53

   60 factor: LPAREN . expression RPAREN

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable           go to state 61
    expression         go to state 81
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 54

   41 expression_statement: SEMICOLON .

    $default  reduce using rule 41 (expression_statement)


State 55

   33 statement: compound_statement .

    $default  reduce using rule 33 (statement)


State 56

   31 statement: var_declaration .

    $default  reduce using rule 31 (statement)


State 57

   21 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 82

    declaration_list  go to state 14


State 58

   18 compound_statement: LCURL $@3 statements . RCURL
   30 statements: statements . statement

    error        shift, and go to state 42
    IF           shift, and go to state 43
    FOR          shift, and go to state 44
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    WHILE        shift, and go to state 45
    RETURN       shift, and go to state 46
    PRINTLN      shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53
    LCURL        shift, and go to state 31
    RCURL        shift, and go to state 83
    SEMICOLON    shift, and go to state 54

    compound_statement    go to state 55
    var_declaration       go to state 56
    type_specifier        go to state 57
    statement             go to state 84
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor                go to state 68


State 59

   29 statements: statement .

    $default  reduce using rule 29 (statements)


State 60

   32 statement: expression_statement .

    $default  reduce using rule 32 (statement)


State 61

   46 expression: variable . ASSINOP logic_expression
   58 factor: variable .
   63       | variable . INCOP
   64       | variable . DECOP

    INCOP    shift, and go to state 85
    DECOP    shift, and go to state 86
    ASSINOP  shift, and go to state 87

    $default  reduce using rule 58 (factor)


State 62

   42 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 88


State 63

   45 expression: logic_expression .

    $default  reduce using rule 45 (expression)


State 64

   47 logic_expression: rel_expression .
   48                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 89

    $default  reduce using rule 47 (logic_expression)


State 65

   49 rel_expression: simple_expression .
   50               | simple_expression . RELOP simple_expression
   52 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 90
    RELOP  shift, and go to state 91

    $default  reduce using rule 49 (rel_expression)


State 66

   51 simple_expression: term .
   54 term: term . MULOP unary_expression

    MULOP  shift, and go to state 92

    $default  reduce using rule 51 (simple_expression)


State 67

   53 term: unary_expression .

    $default  reduce using rule 53 (term)


State 68

   57 unary_expression: factor .

    $default  reduce using rule 57 (unary_expression)


State 69

   20 compound_statement: LCURL @4 RCURL .

    $default  reduce using rule 20 (compound_statement)


State 70

   40 statement: error SEMICOLON .

    $default  reduce using rule 40 (statement)


State 71

   35 statement: IF LPAREN . expression RPAREN statement
   36          | IF LPAREN . expression RPAREN statement ELSE statement

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable           go to state 61
    expression         go to state 93
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 72

   34 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53
    SEMICOLON    shift, and go to state 54

    expression_statement  go to state 94
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor                go to state 68


State 73

   37 statement: WHILE LPAREN . expression RPAREN statement

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable           go to state 61
    expression         go to state 95
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 74

   39 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 96


State 75

   38 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 97


State 76

   59 factor: ID LPAREN . argument_list RPAREN

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    $default  reduce using rule 66 (argument_list)

    variable           go to state 78
    logic_expression   go to state 98
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68
    argument_list      go to state 99
    arguments          go to state 100


State 77

   44 variable: ID LTHIRD . expression RTHIRD

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable           go to state 61
    expression         go to state 101
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 78

   58 factor: variable .
   63       | variable . INCOP
   64       | variable . DECOP

    INCOP  shift, and go to state 85
    DECOP  shift, and go to state 86

    $default  reduce using rule 58 (factor)


State 79

   55 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 55 (unary_expression)


State 80

   56 unary_expression: NOT unary_expression .

    $default  reduce using rule 56 (unary_expression)


State 81

   60 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 102


State 82

   27 declaration_list: ID .
   28                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 16

    $default  reduce using rule 27 (declaration_list)


State 83

   18 compound_statement: LCURL $@3 statements RCURL .

    $default  reduce using rule 18 (compound_statement)


State 84

   30 statements: statements statement .

    $default  reduce using rule 30 (statements)


State 85

   63 factor: variable INCOP .

    $default  reduce using rule 63 (factor)


State 86

   64 factor: variable DECOP .

    $default  reduce using rule 64 (factor)


State 87

   46 expression: variable ASSINOP . logic_expression

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable           go to state 78
    logic_expression   go to state 103
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 88

   42 expression_statement: expression SEMICOLON .

    $default  reduce using rule 42 (expression_statement)


State 89

   48 logic_expression: rel_expression LOGICOP . rel_expression

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable           go to state 78
    rel_expression     go to state 104
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 90

   52 simple_expression: simple_expression ADDOP . term

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable          go to state 78
    term              go to state 105
    unary_expression  go to state 67
    factor            go to state 68


State 91

   50 rel_expression: simple_expression RELOP . simple_expression

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable           go to state 78
    simple_expression  go to state 106
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 92

   54 term: term MULOP . unary_expression

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable          go to state 78
    unary_expression  go to state 107
    factor            go to state 68


State 93

   35 statement: IF LPAREN expression . RPAREN statement
   36          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 108


State 94

   34 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53
    SEMICOLON    shift, and go to state 54

    expression_statement  go to state 109
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor                go to state 68


State 95

   37 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 110


State 96

   39 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 39 (statement)


State 97

   38 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 111


State 98

   68 arguments: logic_expression .

    $default  reduce using rule 68 (arguments)


State 99

   59 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 112


State 100

   65 argument_list: arguments .
   67 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 113

    $default  reduce using rule 65 (argument_list)


State 101

   44 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 114


State 102

   60 factor: LPAREN expression RPAREN .

    $default  reduce using rule 60 (factor)


State 103

   46 expression: variable ASSINOP logic_expression .

    $default  reduce using rule 46 (expression)


State 104

   48 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 48 (logic_expression)


State 105

   52 simple_expression: simple_expression ADDOP term .
   54 term: term . MULOP unary_expression

    MULOP  shift, and go to state 92

    $default  reduce using rule 52 (simple_expression)


State 106

   50 rel_expression: simple_expression RELOP simple_expression .
   52 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 90

    $default  reduce using rule 50 (rel_expression)


State 107

   54 term: term MULOP unary_expression .

    $default  reduce using rule 54 (term)


State 108

   35 statement: IF LPAREN expression RPAREN . statement
   36          | IF LPAREN expression RPAREN . statement ELSE statement

    error        shift, and go to state 42
    IF           shift, and go to state 43
    FOR          shift, and go to state 44
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    WHILE        shift, and go to state 45
    RETURN       shift, and go to state 46
    PRINTLN      shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53
    LCURL        shift, and go to state 31
    SEMICOLON    shift, and go to state 54

    compound_statement    go to state 55
    var_declaration       go to state 56
    type_specifier        go to state 57
    statement             go to state 115
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor                go to state 68


State 109

   34 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable           go to state 61
    expression         go to state 116
    logic_expression   go to state 63
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 110

   37 statement: WHILE LPAREN expression RPAREN . statement

    error        shift, and go to state 42
    IF           shift, and go to state 43
    FOR          shift, and go to state 44
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    WHILE        shift, and go to state 45
    RETURN       shift, and go to state 46
    PRINTLN      shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53
    LCURL        shift, and go to state 31
    SEMICOLON    shift, and go to state 54

    compound_statement    go to state 55
    var_declaration       go to state 56
    type_specifier        go to state 57
    statement             go to state 117
    expression_statement  go to state 60
    variable              go to state 61
    expression            go to state 62
    logic_expression      go to state 63
    rel_expression        go to state 64
    simple_expression     go to state 65
    term                  go to state 66
    unary_expression      go to state 67
    factor                go to state 68


State 111

   38 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 118


State 112

   59 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 59 (factor)


State 113

   67 arguments: arguments COMMA . logic_expression

    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53

    variable           go to state 78
    logic_expression   go to state 119
    rel_expression     go to state 64
    simple_expression  go to state 65
    term               go to state 66
    unary_expression   go to state 67
    factor             go to state 68


State 114

   44 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 44 (variable)


State 115

   35 statement: IF LPAREN expression RPAREN statement .
   36          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 120

    $default  reduce using rule 35 (statement)


State 116

   34 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 121


State 117

   37 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 37 (statement)


State 118

   38 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 38 (statement)


State 119

   67 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 67 (arguments)


State 120

   36 statement: IF LPAREN expression RPAREN statement ELSE . statement

    error        shift, and go to state 42
    IF           shift, and go to state 43
    FOR          shift, and go to state 44
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    WHILE        shift, and go to state 45
    RETURN       shift, and go to state 46
    PRINTLN      shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ID           shift, and go to state 50
    ADDOP        shift, and go to state 51
    NOT          shift, and go to state 52
    LPAREN       shift, and go to state 53
    LCURL        shift, and go to state 31
    SEMICOLON    shift, and go to state 54
